app/assets/tailwind/sure-design-system/_generated.css
/* ... */
@utility bg-inverse {
  @apply bg-gray-800;

  @variant theme-dark {
    @apply bg-white;
  }
}

@utility bg-inverse-hover {
  @apply bg-gray-700;

  @variant theme-dark {
    @apply bg-gray-100;
  }
}

@utility bg-overlay {
  background-color: --alpha(var(--color-gray-100) / 50%);

  @variant theme-dark {
    background-color: var(--color-alpha-black-900);
  }
}

@utility bg-loader {
  @apply bg-surface-inset animate-pulse;
}

@utility text-primary {
  @apply text-gray-900;

  @variant theme-dark {
    @apply text-white;
  }
}

@utility text-inverse {
  @apply text-white;

  @variant theme-dark {
    @apply text-gray-900;
  }
}

@utility text-secondary {
  @apply text-gray-500;

  @variant theme-dark {
    @apply text-gray-300;
  }
}

@utility text-subdued {
  @apply text-gray-400;

  @variant theme-dark {
    @apply text-gray-400;
  }
}

@utility shadow-border-xs {
  box-shadow: var(--shadow-xs), 0px 0px 0px 1px var(--color-alpha-black-50);

  @variant theme-dark {
    box-shadow: var(--shadow-xs), 0px 0px 0px 1px var(--color-alpha-white-50);
  }
}

@utility shadow-border-sm {
  box-shadow: var(--shadow-sm), 0px 0px 0px 1px var(--color-alpha-black-50);

  @variant theme-dark {
    box-shadow: var(--shadow-sm), 0px 0px 0px 1px var(--color-alpha-white-50);
  }
}

@utility shadow-border-md {
  box-shadow: var(--shadow-md), 0px 0px 0px 1px var(--color-alpha-black-50);

  @variant theme-dark {
    box-shadow: var(--shadow-md), 0px 0px 0px 1px var(--color-alpha-white-50);
  }
}

@utility shadow-border-lg {
  box-shadow: var(--shadow-lg), 0px 0px 0px 1px var(--color-alpha-black-50);

  @variant theme-dark {
    box-shadow: var(--shadow-lg), 0px 0px 0px 1px var(--color-alpha-white-50);
  }
}

@utility shadow-border-xl {
  box-shadow: var(--shadow-xl), 0px 0px 0px 1px var(--color-alpha-black-50);

  @variant theme-dark {
    box-shadow: var(--shadow-xl), 0px 0px 0px 1px var(--color-alpha-white-50);
  }
}

@utility border-primary {
  @apply border-alpha-black-300;

  @variant theme-dark {
    @apply border-alpha-white-500;
  }
}

@utility border-secondary {
  @apply border-alpha-black-200;

  @variant theme-dark {
    @apply border-alpha-white-400;
  }
}

@utility border-divider {
  @apply border-tertiary;
}

@utility border-subdued {
  @apply border-alpha-black-50;

  @variant theme-dark {
    @apply border-alpha-white-200;
  }
}

@utility border-solid {
  @apply border-black;

  @variant theme-dark {
    @apply border-white;
  }
}

@utility border-destructive {
  @apply border-red-500;

  @variant theme-dark {
    @apply border-red-400;
  }
}

@utility border-inverse {
  @apply border-alpha-white-200;

  @variant theme-dark {
    @apply border-alpha-black-300;
  }
}

@utility button-bg-primary {
  @apply bg-gray-900;

  @variant theme-dark {
    @apply bg-white;
  }
}

@utility button-bg-primary-hover {
  @apply bg-gray-800;

  @variant theme-dark {
    @apply bg-gray-50;
  }
}

@utility button-bg-secondary {
  @apply bg-gray-50;

  @variant theme-dark {
    @apply bg-gray-700;
  }
}

@utility button-bg-secondary-hover {
  @apply bg-gray-100;

  @variant theme-dark {
    @apply bg-gray-600;
  }
}

@utility button-bg-secondary-strong {
  @apply bg-gray-200;

  @variant theme-dark {
    @apply bg-gray-700;
  }
}

@utility button-bg-secondary-strong-hover {
  @apply bg-gray-300;

  @variant theme-dark {
    @apply bg-gray-600;
  }
}

@utility button-bg-disabled {
  @apply bg-gray-50;

  @variant theme-dark {
    @apply bg-gray-700;
  }
}

@utility button-bg-destructive {
  @apply bg-red-500;

  @variant theme-dark {
    @apply bg-red-400;
  }
}

@utility button-bg-destructive-hover {
  @apply bg-red-600;

  @variant theme-dark {
    @apply bg-red-500;
  }
}

@utility button-bg-ghost-hover {
  @apply bg-gray-50;

  @variant theme-dark {
    @apply bg-gray-800 text-inverse;
  }
}

@utility button-bg-outline-hover {
  @apply bg-gray-100;

  @variant theme-dark {
    @apply bg-gray-700;
  }
}

@utility tab-item-active {
  @apply bg-white;

  @variant theme-dark {
    @apply bg-gray-700;
  }
}

@utility tab-item-hover {
  @apply bg-gray-200;

  @variant theme-dark {
    @apply bg-gray-800;
  }
}

@utility tab-bg-group {
  @apply bg-gray-50;

  @variant theme-dark {
    @apply bg-alpha-black-700;
  }
}

